[workspace]
members = ["transport"]
resolver = "2"

[workspace.dependencies]
libp2p = { git = "https://github.com/Wiezzel/rust-libp2p.git", rev = "4d5e0eea" }
# libp2p-connection-limits = { git = "https://github.com/Wiezzel/rust-libp2p.git", rev = "4d5e0eea" }
# libp2p-swarm-derive = { git = "https://github.com/Wiezzel/rust-libp2p.git", rev = "4d5e0eea" }
